[gd_scene load_steps=2 format=3 uid="uid://47n6gpt83kqu"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_ktl2p"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ktl2p")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = -110.0
offset_top = 2.0
offset_right = -58.0
offset_bottom = 25.0
text = "Score: "

[node name="TimeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = -54.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 25.0
text = "Time: "

[node name="BananasLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = -3.0
offset_top = 2.0
offset_right = 73.0
offset_bottom = 25.0
text = "Bananas: "

[node name="ShocksLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 77.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 25.0
size_flags_horizontal = 8
text = "Shocks: "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Boobies"
